# fswatch

./: CMakeLists.txt  README.md
src/: fswatch.c
